# openpose_ros

./: .gitmodules  CMakeLists.txt  README.md  dependency_hints.txt  install_openpose_and_enable_package.sh  package.xml
openpose_ros_msgs/: CMakeLists.txt  README.md  package.xml
openpose_ros_msgs/msg/: BodypartDetection.msg  BodypartDetection_3d.msg  PersonDetection.msg  PersonDetection_3d.msg
openpose_ros_pkg/: CMakeLists.txt  README.md  package.xml
openpose_ros_pkg/src/: openpose_ros_node.cpp  openpose_ros_node_3d.cpp  openpose_ros_node_firephinx.cpp  talker.cpp  test_openpose_ros_service_call.cpp
skeleton_extract_3d/: CMakeLists.txt  README.md  package.xml
skeleton_extract_3d/launch/: openpose_skeleton_extract.launch
skeleton_extract_3d/src/: skeleton_extract_3d_node.cpp  skeleton_extract_3d_visualization_node.cpp
src/: openpose_ros_node.cpp
