<?xml version="1.0"?>
<package>
  <name>openpose_ros_msgs</name>
  <version>0.0.0</version>
  <description>The openpose_ros_msgs package</description>

  <maintainer email="stevenjj@todo.todo">stevenjj</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>sensor_msgs</build_depend>  

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>  
  <run_depend>sensor_msgs</run_depend>  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
